Fixing Modal to prevent issues when scrolling. Tweaks to spacing for section class. Added fadeOut animation and class.

--- a/init.css
+++ b/init.css
@@ -43,7 +43,7 @@ p{
 
 /* Section */
 .section{
-    min-height: 100%;
+    height: 100%;
     max-width: 98vw;
     margin: 0;
     padding: 2rem 1rem 2rem 1rem;
@@ -51,7 +51,7 @@ p{
 
 /* Modal */
 .modal{
-    position: absolute;
+    position: fixed;
     margin: 1.5%;
     padding: 0;
     top: 0;
@@ -110,6 +110,11 @@ p{
     animation-duration: 1.7s;
     animation-name: fadeIn;
 }
+.fadeOut{
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
+    animation-name: fadeOut;
+}
 .delayedFadeIn{
     visibility: hidden;
     /* Animations */
@@ -136,6 +141,7 @@ p{
     }
 }
 
+
 /* Animations */
 @keyframes fadeIn {
     from {
@@ -144,5 +150,15 @@ p{
     to {
         opacity: 1;
         visibility: visible;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
     }
 }
